# switcha

./: .gitignore  README.md  devlog.txt  log.txt  pyproject.toml  test.sh
swif/: enumwindows.py  main.py  t.py  thumbnail.py
swita/: config.py  keyboard.py  keydetector.py  main.py  main_old.py  t.py  thumbnail.py  tt.py
switcha/: __main__.py  conf.py  config.py  draw.py  fme_proxy.py  icon.py  keyboard.py  layout.py  main.py  qt.py  rawinput.py  requirements.txt  slots.py  t.py  thumb.py  thumbnail.py  utils.py  window.py  windows.py
switcha/tests/: test_slots.py  test_utils.py
tech feasibility/: GetKeyboardState.py  SetActiveWindow.py  SetWindowsHookEx.py  hook.py  keybd_event 20151230095524.py  t.py  thumbnail.py
tech feasibility/f6/: misc.py  win32.py
tech feasibility/tmp/: t.py  ttt.py
